--- a/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
+++ b/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\202401161444310_AddCategoryDescription.Designer.cs">
       <DependentUpon>202401161444310_AddCategoryDescription.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202401161544052_AddProductDescriptionManCodePrice.cs" />
+    <Compile Include="Migrations\202401161544052_AddProductDescriptionManCodePrice.Designer.cs">
+      <DependentUpon>202401161544052_AddProductDescriptionManCodePrice.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -84,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202401161444310_AddCategoryDescription.resx">
       <DependentUpon>202401161444310_AddCategoryDescription.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202401161544052_AddProductDescriptionManCodePrice.resx">
+      <DependentUpon>202401161544052_AddProductDescriptionManCodePrice.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
